# Anvil

./: .gitignore  Makefile  README.md  ansible.py  ansible_utils.py  anvil.py  anvil_gui.py  custom_textedit.py  dialogs.py  main.py  pyproject.toml
cli/: file_utils.py  parse_input.py
config/: anvil.yaml  anvil_template.yaml  vars.py
core/: ansible.py  anvil.yaml  anvil_cli.py  anvil_gui.py  anvil_template.yaml  dialogs.py  file_utils.py  gui_components.py  helpers.py  parse_input.py  worker.py
playbooks/: fetch_file.yml  send_file.yml
repo/: peddle_configs
src/: ansible.py  anvil_cli.py  gui_components.py
src/Anvil/: __init__.py  ansible.py  anvil.py  classes.py  cli.py  config.py  dialogs.py  filemanager.py  gui.py  gui_components.py  helpers.py  utilities.py  worker.py
src/Anvil/data/: template.yaml
src/anvil/: __init__.py  __main__.py  ansible.py  dialogs.py  gui_components.py  oldgui.py  worker.py
src/anvil/ansible/: __init__.py  ansible.py  ansibleold.py  parse_event.py  play_builder.py  worker.py
src/anvil/cli/: oldcli.py
src/anvil/config/: __init__.py  cli.py  config.py  config_options.py  inventory.py  project.py  projectdata.py
src/anvil/gui/: __init__.py  anvil_gui.py  create_components.py  dialogs.py  gui_sections.py  inventorywindow.py  mainwindow.py  mainwindow_gui.py
src/anvil/helpers/: configutils.py  data_helper.py  datautils.py  filemanager.py  files.py  logger.py  yaml.py  yamlmanager.py
