[build-system]
requires = ["setuptools", "setuptools_scm"]

[project]
name = "anvil"
version = "2024.0.0"

requires-python = ">=3.9"
authors = [
  {name = "Nathan Price", email = "pradyun@example.com"},
]
description = ""
readme = "README.md"
license = {text = "BSD-3-Clause"}
keywords = [""]
classifiers = [
  "Programming Language :: Python"
]
dependencies = [
  "ansible_runner",
  "PySide6",
  "pyyaml",
  "PyQtDarkTheme-fork",
  "click"
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
"Bug Tracker" = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
anvil = "anvil:anvil"