[build-system]
requires = ["setuptools>=45, <=72.1.0", "setuptools-scm[toml]>=6.2, <=8.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "anvil"
version = "2024.0.0"
requires-python = ">=3.9"
authors = [{ name = "Nathan Price", email = "pradyun@example.com" }]
description = ""
readme = "README.md"
license = { text = "BSD-3-Clause" }
keywords = [""]
classifiers = ["Programming Language :: Python"]
dependencies = [
    "ansible_runner",
    "PySide6",
    "pyyaml",
    "PyQtDarkTheme-fork",
    "click",
    "python-dotenv",
    "pylint",
    "flake8",
    "pyproject-flake8",
    "pytest",
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
"Bug Tracker" = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
anvil = "anvil:anvil"

[tool.pylint.main]
output-format = "colorized"
extension-pkg-whitelist = ["PySide6"]

[tool.pylint.format]
max-line-length = "120"

[tool.pylint."messages control"]
disable = [
    "C0103", # invalid-name
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
    "R0902", # too-many-instance-attributes
    "W0201", # attribute-defined-outside-init
    "W0613", # unused-argument
    "W0718", # broad-exception-caught
]

[tool.flake8]
max-line-length = 120
ignore = ["E501"]
